Revert "fix(api): improve the backend pipeline workflow (#81)"
This reverts commit e37ca1dc7d69a112cc861403c6e49bc572fbd4d9.
